// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
<InputField
  errorText={null}
  hintText={null}
>
  <glamorous(label)
    errorText={null}
  >
    <label
      className="css-1b081ox"
    >
      <glamorous(span)
        errorText={null}
      >
        <span
          className="css-yengmq"
        >
          example
        </span>
      </glamorous(span)>
      <span />
      <span />
      <glamorous(input)
        errorText={null}
        type="text"
      >
        <input
          className="css-opcxs3"
          type="text"
        />
      </glamorous(input)>
    </label>
  </glamorous(label)>
</InputField>
`;

exports[`enzyme.render 1`] = `
<label
  class="css-1b081ox"
>
  <span
    class="css-yengmq"
  >
    example
  </span>
  <span>
    
  </span>
  <span>
    
  </span>
  <input
    class="css-opcxs3"
    type="text"
  >
    
  </input>
</label>
`;

exports[`enzyme.shallow 1`] = `
<glamorous(label)
  errorText={null}
>
  <glamorous(span)
    errorText={null}
  >
    example
  </glamorous(span)>
  <span />
  <span />
  <glamorous(input)
    errorText={null}
    type="text"
  />
</glamorous(label)>
`;
